--- a/style.css
+++ b/style.css
@@ -209,18 +209,6 @@ button:hover {
     transform: scale(1.05);
 }
 
-@media (max-width: 768px) {
-    .container, .info-section {
-        width: 90%;
-        margin: 40px auto;
-        padding: 20px;
-    }
-
-    input[type="file"], select, button {
-        width: 100%;
-    }
-}
-
 #header {
     background-color: #333333;
     padding: 20px 0;
@@ -369,4 +357,77 @@ button:hover {
     font-size: 30px;
     margin-left: 250px;
     margin-right: 150px;
+}
+
+@media screen and (max-width: 952px) {
+    #whiteText {
+        font-size: 16px;
+        margin-left: 10px;
+    }
+    
+    #whiteTextExtra {
+        width: 70%;
+        font-size: 16px;
+        margin-left: 10px;
+    }
+    
+    #whiteButton {
+        width: 350px;
+        font-size: 16px;
+        margin-left: 25px;
+        margin-right: 15px;
+    }
+
+    .container, .info-section {
+        width: 300px;
+        margin: 10px auto;
+        padding: 20px;
+    }
+
+    input[type="file"], select, button {
+        width: 250px;
+    }
+
+    #features {
+        padding: 60px 20px;
+        background-color: white;
+        color: #212121;
+        text-align: center;
+    }
+    
+    #features-title {
+        margin-bottom: 30px;
+    }
+    
+    #feature-container {
+        display: grid;
+        grid-template-columns: repeat(1, 4fr);
+        max-width: 350px;
+        margin: 0 auto;
+        text-align: center;
+    }
+    
+    .feature-item {
+        display: flex;
+        align-items: center;
+        border-radius: 8px;
+        padding: 10px;
+        margin: 8px;
+        width: auto;
+        font-size: 16px;
+        text-align: center;
+        justify-content: center;
+    }
+    
+    .feature-icon {
+        font-size: 25px;
+        color: #dc3545;
+        display: flex;
+        margin-right: 12px;
+    }
+
+    .name {
+        padding: 8px;
+        font-size: 14px;
+    }
 }
